ft_container/test1/logs.txt
In file included from ../vector_tests/operator >=.cpp:1:
../vector_tests/../system/system_methods.ipp:8:2: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
        auto begin = v.begin();
        ^
1 warning generated.
ed.
12: error: no member named 'swap' in 'ft::vector<int, std::__1::allocator<int> >'
    vector.swap(tmp);
    ~~~~~~ ^
../vector_tests/swap().cpp:72:57: note: in instantiation of function template specialization 'swap_test<int>' requested here
    exit(run_vector_unit_test<int>("swap()", swap_test, swap_test));
                                                        ^
../vector_tests/swap().cpp:54:12: error: no member named 'swap' in 'ft::vector<int, std::__1::allocator<int> >'
    vector.swap(tmp3);
    ~~~~~~ ^
1 warning and 2 errors generated.
